# velib-realtime-lakehouse

./: Dockerfile  dagster.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  workspace.yaml
src/: api.py  configs.py  definitions.py  resources.py
src/assets/: bronze.py  maintenance.py  silver.py  station_reference.py  velib_alerte.py
